--- a/Assignment/PA1_template.Rmd
+++ b/Assignment/PA1_template.Rmd
@@ -93,7 +93,7 @@ sum(is.na(activityData))
 ### Replace NA's with average for the interval
 activityData.f <- activityData %>% 
   group_by(interval) %>% 
-  mutate(steps = replace_na(steps, mean(steps, na.rm = TRUE)))
+ mutate(steps = ifelse(test = is.na(steps), yes = mean(x = steps, na.rm = TRUE), no = steps))
 ```
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day.
