--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,7 @@
 title: "Reproducible Research Week 2 Assignment"
 author: "Michael Arthur"
 date: "July 22, 2018"
-output: html_document
+output: github_document
 keep_md: true
 ---
 
